--- a/src/main/resources/static/dashboard.html
+++ b/src/main/resources/static/dashboard.html
@@ -17,7 +17,6 @@
 
         <div id="patient-section" style="display: none;">
             <h3>Find a Doctor</h3>
-            <input type="text" id="doctorSearch" placeholder="Search by name...">
             <ul id="doctor-list"></ul>
         </div>
 
@@ -37,27 +36,31 @@
                 return;
             }
 
-            // Decode token to find user role (simplified)
-            const payload = JSON.parse(atob(token.split('.')[1]));
-            const username = payload.sub;
-            document.getElementById('user-info').textContent = `Logged in as: ${username}`;
+            try {
+                // Decode token to find user role (simplified)
+                const payload = JSON.parse(atob(token.split('.')[1]));
+                const username = payload.sub;
+                const roles = payload.roles || (username === 'admin' ? ['ROLE_ADMIN'] : ['ROLE_PATIENT']);
+                document.getElementById('user-info').textContent = `Logged in as: ${username}`;
 
-            // Show sections based on role
-            if (username.toLowerCase() === 'admin') {
-                document.getElementById('admin-section').style.display = 'block';
-            } else {
-                document.getElementById('patient-section').style.display = 'block';
-                // Fetch and display doctors for patients
-                const response = await fetch('/api/doctors', {
-                    headers: { 'Authorization': `Bearer ${token}` }
-                });
-                const doctors = await response.json();
-                const list = document.getElementById('doctor-list');
-                doctors.forEach(doctor => {
-                    const li = document.createElement('li');
-                    li.textContent = `Dr. ${doctor.firstName} ${doctor.lastName} - ${doctor.specialty}`;
-                    list.appendChild(li);
-                });
+                if (roles.includes('ROLE_ADMIN')) {
+                    document.getElementById('admin-section').style.display = 'block';
+                } else {
+                    document.getElementById('patient-section').style.display = 'block';
+                    const response = await fetch('/api/doctors', {
+                        headers: { 'Authorization': `Bearer ${token}` }
+                    });
+                    const doctors = await response.json();
+                    const list = document.getElementById('doctor-list');
+                    doctors.forEach(doctor => {
+                        const li = document.createElement('li');
+                        li.textContent = `Dr. ${doctor.firstName} ${doctor.lastName} - ${doctor.specialty}`;
+                        list.appendChild(li);
+                    });
+                }
+            } catch (e) {
+                console.error("Error processing token:", e);
+                logout();
             }
         });
     </script>
